# llabs-templates-django-app

./: .editorconfig  CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml  repo.sh  tox.ini
.github/: dependabot.yml
.github/workflows/: dev.yml  release.yml
docs/: console_script_setup.md  faq.md  tutorial.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  HISTORY.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  repo.sh  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: dev.yml  release.yml
{{cookiecutter.project_slug}}/app/app/: settings.py
{{cookiecutter.project_slug}}/demo_app/: {{cookiecutter.python_package_name}}
{{cookiecutter.project_slug}}/demo_app/demo_app/: settings.py
{{cookiecutter.project_slug}}/docker_compose_files/example_app/: Dockerfile
{{cookiecutter.project_slug}}/docs/: installation.md  usage.md
{{cookiecutter.project_slug}}/example_app/: manage.py  pyproject.toml
{{cookiecutter.project_slug}}/example_app/example_app/app/: apps.py  urls.py  views.py
{{cookiecutter.project_slug}}/example_app/example_app/app/static/js/: autocomplete.js
{{cookiecutter.project_slug}}/example_app/example_app/app/templates/: base.html  blank_base.html  index.html  login.html  unthemed_blank_base.html
{{cookiecutter.project_slug}}/example_app/example_app/config/: settings.py  urls.py
{{cookiecutter.project_slug}}/example_app/example_config/: asgi.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/tests/: test_app.py  test_tests.py
{{cookiecutter.project_slug}}/{{cookiecutter.python_package_name}}/: __init__.py  apps.py  cli.py  urls.py
{{cookiecutter.project_slug}}/{{cookiecutter.python_package_name}}/templates/: base.html  blank_base.html  index.html  unthemed_blank_base.html
{{cookiecutter.project_slug}}/{{cookiecutter.python_package_name}}/tests/: test_tests.py
