{%- set license_classifiers = {
    'MIT': 'License :: OSI Approved :: MIT License',
    'BSD-3-Clause': 'License :: OSI Approved :: BSD License',
    'ISC': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache-2.0': 'License :: OSI Approved :: Apache Software License',
    'GPL-3.0-only': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} -%}
[tool]
[tool.poetry]
name = "{{ cookiecutter.python_package_name }}"
version = "{{ cookiecutter.version }}"
homepage = "https://github.com/Loveall-Labs/{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_short_description }}."
authors = ["Loveall Labs LLC <engineering@lovealllabs.com>"]
readme = "README.md"
license =  "Proprietary"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: Other/Proprietary License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
packages = [
    { include = "{{ cookiecutter.python_package_name }}" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
# PUT LIBRARY-REQUIRED DEPENDENCIES HERE
django = "*"

{%- if cookiecutter.command_line_interface|lower == 'fire' %}
fire = "0.4.0"
{%- endif %}

# Pin dev dep versions
ruff = { version = "^0.8.0", optional = true}
pytest  = { version = "^8.3.3", optional = true}
pytest-cov  = { version = "^5.0.0", optional = true}
pytest-django  = { version = "^4.9.0", optional = true}
tox  = { version = "^4.20.0", optional = true}
mkdocs  = { version = "^1.6.1", optional = true}
mkdocs-include-markdown-plugin  = { version = "^6.2.2", optional = true}
mkdocs-material  = { version = "^9.5.36", optional = true}
mkdocstrings  = { version = "^0.26.1", optional = true}
twine  = { version = "^5.1.1", optional = true}
mkdocs-autorefs = {version = "^1.2.0", optional = true}
pre-commit = {version = "^3.8.0", optional = true}
toml = {version = "^0.10.2", optional = true}
livereload = {version = "^2.4.0", optional = true}
pyreadline = {version = "^2.1", optional = true}
mike = { version="^2.1.3", optional=true}
mypy = {version = "^1.11.2", optional = true}
setuptools = {version="^75.1.0", optional = true}
pkginfo = {version="^1.10.0", optional = true}
virtualenv = {version="^20.26.5", optional = true}
example_app = {path = "example_app", develop = true, optional = true}

[tool.poetry.extras]
# TODO: These should likely be moved to optional dependency groups and re-worked
# elsewhere. I don't think it makes sense for the end user to want to install these.
test = [
    "pytest",
    "pytest-cov",
    "pytest-django",
    ]

dev = ["tox",
    "pre-commit",
    "twine",
    "toml",
    "ruff",
    "mypy"
    ]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extensions",
    "mkdocs-autorefs",
    "mike",
    "setuptools",
    "pkginfo",
    "virtualenv"
    ]

[tool.poetry.group.example_app.dependencies]
example_app = {path = "example_app", develop = true}

{% if cookiecutter.command_line_interface|lower == 'fire' -%}
[tool.poetry.scripts]
{{ cookiecutter.python_package_name }} = '{{ cookiecutter.python_package_name }}.cli:main'
{%- endif %}

# Specify the CodeArtifact repository for publishing
[[tool.poetry.source]]
name = "codeartifact"
url = "https://loveall-labs-255793234685.d.codeartifact.us-east-1.amazonaws.com/pypi/primary/"
priority = "supplemental"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.python_package_name }}"]

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002,H021"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "{{cookiecutter.python_package_name}}.tests.settings"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
